# slack-translate

./: Cargo.toml  README.md  docker-compose.yaml
.devcontainer/: Dockerfile  DockerfileBuild  devcontainer.json  docker-compose.yml
database/: slack-translate_production.sqlite
logs/: translation_log.html
src/: analytics.rs  cache.rs  database.rs  deepl.rs  fileserver.rs  filewriter.rs  main.rs  models.rs  slackbot.rs  translate.rs
src/html/: home.html
src/models/: analytics.rs  app_state.rs  cache.rs  deepl_payload.rs  deepl_response.rs  language.rs  slack_payload.rs  slack_request.rs  slack_response.rs  slack_users.rs
src/pages/: home.rs  translation_log.rs
