[package]
name = "slack-translate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "slack-translate"
path = "src/main.rs"


[dependencies]
axum = "0.6.15"
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
tracing-subscriber = "0.3.16"
tracing = "0.1"
cargo-edit = "0.11.9"
reqwest = { version = "0.11.16", features = ["json"] }
serde_json = "1.0.96"
