[package]
name = "slack-translate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "slack-translate"
path = "src/main.rs"

[dependencies]
axum = "0.6.15"
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
cargo-edit = "0.11.9"
reqwest = { version = "0.11.16", features = ["json"] }
serde_json = "1.0.96"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "normalize-path"] }
redis = { version = "0.23.0", features = ["aio", "connection-manager", "tokio-comp"] }
aho-corasick = "1.0.2"
phf = { version = "0.11.1", features = ["macros"] }
